--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,14 +20,17 @@
 [versions]
 javaVersion = "23.0.1"
 
-spring-boot = "3.4.0-RC1"
-spring-bootPlugin = "3.4.0-RC1"
+# TODO https://github.com/spring-projects/spring-boot/issues/42952
+spring-boot = "3.4.0-SNAPSHOT"
+spring-bootPlugin = "3.4.0-SNAPSHOT"
+#spring-boot = "3.4.0-RC1"
+#spring-bootPlugin = "3.4.0-RC1"
 
 jansi = "2.4.1"
 jetbrains-annotations = "26.0.1"
 mapstruct = "1.6.2"
 springdoc-openapi = "2.6.0"
-spring-addons-starter-oidc = "7.9.0-M5"
+spring-addons-starter-oidc = "8.0.0-RC1"
 
 # -----------------------------------------------------------------------------------------
 # B O M s   u n d   s p e z i f i s c h e   V e r s i o n e n   u e b e r s c h r e i b e n
@@ -46,11 +49,11 @@ hibernate = "7.0.0.Beta1"
 hibernate-processor = "7.0.0.Beta1"
 hibernate-validator = "9.0.0.Beta3"
 hikaricp = "6.0.0"
-#jackson = "2.18.0"
+jackson = "2.18.1"
 jakarta-persistence = "3.2.0"
 jakarta-validation = "3.1.0"
 #junit-jupiter = "5.11.3"
-kotlin = "2.1.0-Beta2"
+kotlin = "2.1.0-RC"
 log4j2 = "3.0.0-beta2"
 logback = "1.5.12"
 #micrometer = "1.14.0-RC1"
@@ -81,14 +84,14 @@ junit-platform-suite = "1.11.3"
 # ----------------------------------------------------------------------------------------
 # C o d e a n a l y s e ,   R e p o r t s ,   D o k u m e n t a t i o n
 # ----------------------------------------------------------------------------------------
-allure-commandline = "2.31.0"
+allure-commandline = "2.32.0"
 allure-junit = "2.28.1"
 #asciidoctorj = "3.0.0"
 asciidoctorj = "2.5.13"
 asciidoctorjDiagram = "2.3.1"
 asciidoctorjPdf = "2.3.19"
 aspectjweaver = "1.9.9.1"
-checkstyle = "10.19.0"
+checkstyle = "10.20.0"
 detekt = "1.23.7"
 errorprone = "2.35.1"
 # org.jruby:jruby
@@ -109,12 +112,12 @@ errorprone-plugin = "4.1.0"
 graalvm = "0.10.3"
 license-report = "2.9"
 markelliot-versions = "0.43.0"
-modernizerPlugin = "1.9.3"
+modernizerPlugin = "1.10.0"
 nwillc-vplugin = "3.0.5"
-owasp-dependencycheck = "11.0.0"
+owasp-dependencycheck = "11.1.0"
 snyk = "0.7.0"
 sonarqube = "5.1.0.4882"
-spotbugsPlugin = "6.0.25"
+spotbugsPlugin = "6.0.26"
 spotless = "7.0.0.BETA4"
 sweeney = "5.0.3"
 test-logger = "4.0.0"
@@ -137,7 +140,7 @@ hibernate = { module = "org.hibernate.orm:hibernate-core", version.ref = "hibern
 hibernate-processor = { module = "org.hibernate.orm:hibernate-processor", version.ref = "hibernate-processor" }
 hibernate-validator = { module = "org.hibernate.validator:hibernate-validator", version.ref = "hibernate-validator" }
 hikaricp = { module = "com.zaxxer:HikariCP", version.ref = "hikaricp" }
-#jackson-bom = { module = "com.fasterxml.jackson:jackson-bom", version.ref = "jackson" }
+jackson-bom = { module = "com.fasterxml.jackson:jackson-bom", version.ref = "jackson" }
 jakarta-persistence = { module = "jakarta.persistence:jakarta.persistence-api", version.ref = "jakarta-persistence" }
 jakarta-validation = { module = "jakarta.validation:jakarta.validation-api", version.ref = "jakarta-validation" }
 #junit-bom = { module = "org.junit:junit-bom", version.ref = "junit-jupiter" }
