--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -66,7 +66,7 @@ server:
   shutdown: graceful
 
 spring:
-  application.name: kunde
+  application.name: autohaus
   aop.proxy-target-class: false
 
   # ==============================================================================
