--- a/extras/kubernetes/autohaus/templates/deployment.yaml
+++ b/extras/kubernetes/autohaus/templates/deployment.yaml
@@ -165,17 +165,17 @@ spec:
         - name: log-{{ include "autohaus.name" . }}{{ .Values.versionSuffix }}
           # https://kubernetes.io/docs/concepts/storage/volumes/#hostpath
           hostPath:
-            path: /run/desktop/mnt/host/c/Zimmermann/volumes/{{ include "autohaus.name" . }}{{ .Values.versionSuffix }}
+            path: /run/desktop/mnt/host/c/Zimmermann/volumes/kunde-v1
             type: Directory
           # https://kubernetes.io/docs/concepts/storage/volumes/#emptydir
           #emptyDir: {}
         - name: private-key-{{ include "autohaus.name" . }}
           hostPath:
-            path: /run/desktop/mnt/host/c/Users/j/IdeaProjects/autohaus{{ .Values.versionSuffix }}/autohaus/src/main/resources/private-key.pem
+            path: /run/desktop/mnt/host/c/Users/jonas/IdeaProjects/autohaus/autohaus/src/main/resources/private-key.pem
             type: File
         - name: certificate-{{ include "autohaus.name" . }}
           hostPath:
-            path: /run/desktop/mnt/host/c/Users/j/IdeaProjects/autohaus{{ .Values.versionSuffix }}/autohaus/src/main/resources/certificate.crt
+            path: /run/desktop/mnt/host/c/Users/jonas/IdeaProjects/autohaus/autohaus/src/main/resources/certificate.crt
             type: File
       # https://kubernetes.io/docs/concepts/scheduling-eviction/topology-spread-constraints
       # https://polaris.docs.fairwinds.com/checks/reliability
