--- a/extras/kubernetes/autohaus/templates/configmap.yaml
+++ b/extras/kubernetes/autohaus/templates/configmap.yaml
@@ -19,7 +19,7 @@ apiVersion: v1
 # https://kubernetes.io/docs/concepts/configuration/configmap
 kind: ConfigMap
 metadata:
-  name: {{ include "autohaus.fullname" . }}
+  name: {{ include "krankenhaus.fullname" . }}
   namespace: {{ .Values.namespace }}
 data:
   # Key-Value-Paare (hier: fuer die Umgebungsvariable)
