--- a/extras/kubernetes/autohaus/templates/network-policy.yaml
+++ b/extras/kubernetes/autohaus/templates/network-policy.yaml
@@ -20,11 +20,11 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: {{ include "krankenhaus.fullname" . }}
+  name: {{ include "autohaus.fullname" . }}
   namespace: {{ .Values.namespace }}
 spec:
   # Spezifikation, auf welche Pods die NetworkPolicy angewendet wird
   podSelector:
     matchLabels:
-      {{- include "krankenhaus.selectorLabels" . | nindent 6 }}
+      {{- include "autohaus.selectorLabels" . | nindent 6 }}
   policyTypes: [Ingress, Egress]
