--- a/extras/kubernetes/autohaus/values.yaml
+++ b/extras/kubernetes/autohaus/values.yaml
@@ -46,13 +46,10 @@ datasource:
   # -- Benutzername für die DB
   username: autohaus
   # -- Passwort für die DB (Base64)
-  password: Change Me!
+  password: p
 
 # -- Rechnername des Mailservers als Umgebungsvariable
 mailhost: smtp
-
-# -- Version als Suffix in deployment.yaml für Volumes
-versionSuffix: -v2
 
 # -- Anzahl Replica im Pod von Kubernetes
 replicaCount: 2
