--- a/extras/kubernetes/autohaus/templates/secret.yaml
+++ b/extras/kubernetes/autohaus/templates/secret.yaml
@@ -14,11 +14,9 @@
 # along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
 #  "." am Anfang bezeichnet den Top-Level Namensraum
-
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "autohaus.fullname" . }}
-  namespace: {{ .Values.namespace }}
+  name: datasource-secret
 data:
-  SPRING_DATASOURCE_PASSWORD: {{ .Values.datasource.password }}
+  password: {{ .Values.datasource.password | default "default_password" | b64enc }}
