--- a/extras/kubernetes/autohaus/templates/deployment.yaml
+++ b/extras/kubernetes/autohaus/templates/deployment.yaml
@@ -26,8 +26,8 @@ metadata:
   # https://kubernetes.io/docs/concepts/overview/working-with-objects/common-labels
   # https://helm.sh/docs/chart_best_practices/labels
   labels:
-    # https://helm.sh/docs/chart_template_guide/function_list
-    # nindent rueckt um eine bestimmte Anzahl ("n") Zeichen ein
+  # https://helm.sh/docs/chart_template_guide/function_list
+  # nindent rueckt um eine bestimmte Anzahl ("n") Zeichen ein
     {{- include "autohaus.labels" . | nindent 4 }}
 spec:
   # https://kubernetes.io/docs/concepts/workloads/controllers/deployment/#selector
@@ -39,7 +39,17 @@ spec:
       {{- include "autohaus.selectorLabels" . | nindent 6 }}
   # Anzahl laufender Pods fuer das Template zu diesem Deployment (s.u.) -> ReplicaSet
   replicas: {{ .Values.replicaCount }}
-  # max. Wartezeit in Sekunden, bis "failed progressing" eintritt
+  #strategy:
+  #  # https://kubernetes.io/docs/concepts/workloads/controllers/deployment/#rolling-update-deployment
+  #  type: RollingUpdate
+  #  rollingUpdate:
+  #    # https://kubernetes.io/docs/concepts/workloads/controllers/deployment/#max-surge
+  #    # to surge = anschwellen
+  #    maxSurge: {{ .Values.rollingUpdate.maxSurge }}
+  #    # https://kubernetes.io/docs/concepts/workloads/controllers/deployment/#max-unavailable
+  #    # unavailable during the update process
+  #    maxUnavailable: {{ .Values.rollingUpdate.maxUnavailable }}
+  # max. Wartezeit in Seautohausn, bis "failed progressing" eintritt
   # https://kubernetes.io/docs/concepts/workloads/controllers/deployment/#progress-deadline-seconds
   progressDeadlineSeconds: {{ .Values.progressDeadlineSeconds }}
   # https://kubernetes.io/docs/concepts/workloads/pods/#pod-templates
@@ -54,6 +64,7 @@ spec:
       containers:
         # https://kubernetes.io/docs/concepts/containers/images
         - image: "{{ .Values.image.repository }}/{{ .Values.image.name }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+          # default
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           name: {{ .Chart.Name }}
           # https://kubernetes.io/docs/tasks/inject-data-application/define-interdependent-environment-variables
@@ -62,12 +73,6 @@ spec:
             # https://kubernetes.io/docs/concepts/configuration/configmap
             - configMapRef:
                 name: {{ include "autohaus.fullname" . }}
-          env:
-            - name: SPRING_DATASOURCE_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: {{ include "autohaus.fullname" . }}
-                  key: SPRING_DATASOURCE_PASSWORD
           ports:
             - containerPort: {{ .Values.deployment.containerPort }}
               name: http
@@ -124,7 +129,7 @@ spec:
             httpGet:
               path: /actuator/health/liveness
               port: http
-            # Anzahl Sekunden, bis die Probe fuer Liveness abgesetzt wird
+            # Anzahl Seautohausn, bis die Probe fuer Liveness abgesetzt wird
             initialDelaySeconds: {{ .Values.livenessProbe.initialDelay }}
             # default: 1 Sek.
             timeoutSeconds: {{ .Values.livenessProbe.timeout }}
@@ -138,7 +143,7 @@ spec:
             httpGet:
               path: /actuator/health/readiness
               port: http
-            # Anzahl Sekunden, bis die Probe fuer Readiness abgesetzt wird
+            # Anzahl Seautohausn, bis die Probe fuer Readiness abgesetzt wird
             initialDelaySeconds: {{ .Values.readinessProbe.initialDelay }}
             # default: 1 Sek.
             timeoutSeconds: {{ .Values.readinessProbe.timeout }}
@@ -155,7 +160,7 @@ spec:
             - mountPath: /workspace/BOOT-INF/classes/certificate.crt
               name: certificate-{{ include "autohaus.name" . }}
               readOnly: true
-      priorityClassName: medium-priority
+
       volumes:
         - name: log-{{ include "autohaus.name" . }}{{ .Values.versionSuffix }}
           # https://kubernetes.io/docs/concepts/storage/volumes/#hostpath
