--- a/extras/kubernetes/autohaus/values.yaml
+++ b/extras/kubernetes/autohaus/values.yaml
@@ -1,4 +1,4 @@
-# Copyright (C) 2022 - present Juergen Zimmermann, Hochschule Karlsruhe
+# Copyright (C) 2020 - present Juergen Zimmermann, Hochschule Karlsruhe
 #
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -13,7 +13,7 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
-# Default values for autohaus.
+# Default values for kunde.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
@@ -40,19 +40,17 @@ ssl: "true"
 # -- Flag, ob HTTP2 genutzt wird
 http2: "true"
 
-datasource:
-  # -- URL für den DB-Zugriff
-  url: jdbc:postgresql://postgres/autohaus?sslmode=verify-ca&sslrootcert=/workspace/BOOT-INF/classes/certificate.crt
-  # -- Benutzername für die DB
-  username: autohaus
-  # -- Passwort für die DB (Base64)
-  password: p
-
-# -- Rechnername des Mailservers als Umgebungsvariable
-mailhost: smtp
+# -- Version als Suffix in deployment.yaml für Canary-Releases
+versionSuffix:
 
 # -- Anzahl Replica im Pod von Kubernetes
 replicaCount: 2
+
+rollingUpdate:
+  # -- zusätzliche Pods bei "Rolling Update"
+  maxSurge: 1
+  # -- nicht-verfügbare Pods bei "Rolling Update"
+  maxUnavailable: 1
 
 # -- max. Wartezeit in Sekunden, bis "failed progressing" eintritt
 progressDeadlineSeconds: 10
@@ -68,9 +66,6 @@ image:
   tag: ""
 
 deployment:
-  # -- Name der Secret-Ressource beim DB-System
-  secretNameDB: postgres
-
   # -- Port innerhalb des Containers
   containerPort: 8080
 
@@ -115,10 +110,6 @@ readinessProbe:
   # -- Max. Anzahl an Fehlversuchen bei den Readiness-Proben
   failureThreshold: 3
 
-zipkin:
-  # -- Endpunkt für Zipkin beim Tracing
-  endpoint: http://zipkin:9411/api/v2/spans
-
 autoscaling:
   # -- Mininmale Anzahl an Replicas
   minReplicas: 1
@@ -128,8 +119,5 @@ autoscaling:
   cpuUtilizationPercentage: 80
   # -- Maximale RAM-Auslastung
   memoryUtilizationPercentage: 80
-
-h2:
-  console:
-    # -- Aktivierung des DB-Browsers für H2
-    enabled: "false"
+datasource:
+  password: p
