Abgabe 3 erstmal ohne Serveraustausch

--- a/extras/compose/autohaus/.env
+++ b/extras/compose/autohaus/.env
@@ -74,10 +74,9 @@ SPRING_MAIL_HOST=fakesmtp
 # ----------------------------------------------------------------------------------------------------------------------
 # K e y c l o a k
 # ----------------------------------------------------------------------------------------------------------------------
-#SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUER-URI=http://keycloak:8080/realms/spring
-#APP_KEYCLOAK_CLIENT-SECRET=5m90YROKjpPbGtJ5kI7vasmgZ4X6MlsV
+APP_KEYCLOAK_CLIENT-SECRET=ct6olMO5Z6bOKIeHZ9zNa1w0onMg1Lio
 
 # ----------------------------------------------------------------------------------------------------------------------
 # Z i p k i n
 # ----------------------------------------------------------------------------------------------------------------------
-#MANAGEMENT_ZIPKIN_TRACING_ENDPOINT=http://zipkin:9411/api/v2/spans
+MANAGEMENT_ZIPKIN_TRACING_ENDPOINT=http://zipkin:9411/api/v2/spans
