--- a/extras/compose/backend/compose.yml
+++ b/extras/compose/backend/compose.yml
@@ -22,7 +22,11 @@
 
 # https://docs.docker.com/compose/compose-file/14-include
 include:
-  - path: ../postgres/compose.yml
-  #- path: ../mysql/compose.yml
-  #- path: ../oracle/compose.yml
-  - path: ../fakesmtp/compose.yml
+  - path:
+    - ../postgres/compose.yml
+    #- ../mysql/compose.yml
+    #- ../oracle/compose.yml
+    - ../keycloak/compose.yml
+    - ../zipkin/compose.yml
+    - ../fakesmtp/compose.yml
+    #- ../prometheus-grafana/compose.yml
