--- a/extras/kubernetes/fakesmtp/templates/network-policy.yaml
+++ b/extras/kubernetes/fakesmtp/templates/network-policy.yaml
@@ -36,9 +36,9 @@ spec:
               app.kubernetes.io/instance: autohaus
         - podSelector:
             matchLabels:
-              app: kunde
-              app.kubernetes.io/name: kunde
-              app.kubernetes.io/instance: kunde
+              app: autohaus
+              app.kubernetes.io/name: autohaus
+              app.kubernetes.io/instance: autohaus
       ports:
         - port: smtp
           protocol: TCP
