Abgabe 3 erstmal mit Serveraustausch

--- a/gradle.properties
+++ b/gradle.properties
@@ -85,7 +85,7 @@ imageTag=2024.10.3-buildpacks
 # D a t e n b a n k
 # ----------------------------------------------------------------------------------------------------------------------
 # PostgreSQL, MySQL, Oracle:
-spring.datasource.username=autohaus
+spring.datasource.username=postgres
 spring.datasource.password=p
 # H2:
 #spring.datasource.username=sa
